--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,70 +4,70 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:98z6WRzIDoZb2MSO,iv:fb1KH2etW607XKOtB415111BFWvDyfc91tc5KztG5Z8=,tag:Po6EFVdy/WSJcRhFIWD/Sw==,type:comment]
-    PROXMOX_IP: ENC[AES256_GCM,data:v4n6fXPAJc6flmY=,iv:n894zVEcM0o9SwfCjRr2aMxCvbIbI9t6rQ84tXxrJD8=,tag:0Ryhi6NDAHwtcG3zuUq8oQ==,type:str]
-    VIP: ENC[AES256_GCM,data:6FnrIQzZj2TnE+A=,iv:R+jftEH8sPyHUsdL9LRKK9O8+/xpHvSzXB+Bhl4NROA=,tag:QG+VE1JbdxKeEWXAmhFhfQ==,type:str]
-    MASTER1IP: ENC[AES256_GCM,data:8RsO0Sg7wewselI=,iv:WqjYq5kW+nxvGJt4uuJZ1oVeGbZ7T2ULRHeizSP6j5w=,tag:lVhrQgfM8JRox7It2T79jQ==,type:str]
-    GATEWAY: ENC[AES256_GCM,data:MNVG9Y4Cdk8C2g==,iv:oahcCR9Q2wW+PLl/DdyZz3z3yTzlHciAZKEQEdS3ud4=,tag:W4vEzppNseHK9XrERTL8Zw==,type:str]
-    #ENC[AES256_GCM,data:rYclHUcc4Zdouck93fat,iv:TsgQWxi/uUrcEpcNjEYh77XFK6lGdfOHNhLnyABQMfo=,tag:oAVty8kzrT/FSKeGuqx4Vw==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:0Y6n2bp8dv1/vuX3evlp1Fka+Uzrj9/79A==,iv:Mob1cBHHbBCoLc0Xs3gQxIgJmYtN3krDgmTxPaxIdxg=,tag:Hbgj+wTIUCsjlk2F/95pqA==,type:str]
-    #ENC[AES256_GCM,data:b2OYgnQy4bgy181JIkr2G8+8QdjWWMjLcg==,iv:NnRw9VSvFRvMlApIsWqVl85ddWWzmpsZUvQ+JHgT1m8=,tag:SujKjkI1ec4xQaYklKfesw==,type:comment]
-    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:Arln8zwY0UdtstRB,iv:yuA6nQnEOixLNKILUwnWwGsEYhFOZB/y2byggTmRfA4=,tag:eGHix/U+pC41ul0Hhqv0lA==,type:str]
-    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:SRmR+l/p/fiwb3kg,iv:io1HywvuegqeXAMTPkWzZqRfIuy8swTCQ19siz5aRkk=,tag:sifp2ZXUEpWG+pnlANbbUQ==,type:str]
-    IP_WHITELIST: ENC[AES256_GCM,data:LyGZ9QEWVymWLbsWCfFPs5L6EIOp1GpF6+E=,iv:f2Ukt8svAyBLlXm3TNX1Y7+IaIPhTm+qJjuYUtm9RnI=,tag:hd4qcAUS+es+jWLEZYSAKw==,type:str]
-    BLOCKY_IP: ENC[AES256_GCM,data:ZbELTqqFQLj/I8Vy,iv:EEuOSl3VBWQYc1UrdFhjKtwoDrXKwI6PXedlLvlI7zY=,tag:w1zjlW5X1yrOIS6fp4XZAQ==,type:str]
-    DASHBOARD_IP: ENC[AES256_GCM,data:mPuX+OQuf2eON8Cu,iv:AbMwPidzZE+PSl7r7mknuQ5D8Rut3sWv+EAlLXAoUSQ=,tag:nBI1i6w/g4H/beDWaxfN8A==,type:str]
-    WG_EASY_IP: ENC[AES256_GCM,data:cDnDlNiH20PrX7Vb,iv:eA7zLzmMxgIEjVkCW/RtwWXog1QkDq9E3mfkpYaovA0=,tag:dOpgsghUtGYWvIbsTL9F/Q==,type:str]
-    MINECRAFT_IP: ENC[AES256_GCM,data:Og/Czfcq1ZLHe4wz,iv:rj+UN3g/zB7iFC83eWKlhOaiVlz3PCIEXNDWkTfWb1Y=,tag:ml4/Yno9Xd+tLu1JYSxDIg==,type:str]
-    #ENC[AES256_GCM,data:7AtfWwht0Akb+57Opo+6f3mY,iv:FUwD1XXyTE0XFFbnLQDNy/KvOo8uboe5LcwLb9GNofQ=,tag:qX2eNLll+xFn++nO6meW2g==,type:comment]
-    BOREALIS_IP: ENC[AES256_GCM,data:xvHNXUe+g4Vtaoo=,iv:S3clROeH0R/AbKDU5oResnDsXYtF/ZkdIRCBt4BzWC4=,tag:QrNXXwGXOkYssIXPT/H7MQ==,type:str]
-    #ENC[AES256_GCM,data:DzHkggaEwHgHJQ2c5a78cg==,iv:emLRxTk9DZaa4BVx8r9xV+NhxuE8X153bAhVH1rcDWI=,tag:Zqd5C01hQWAkx411uWUITA==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:S1pq1mOrF9gx6TRnfw==,iv:N1Lm1VIZ41lhJYzzTKOEldJzmJksLQTlngCQWYGRcM4=,tag:AgCC7Uvf7+838/AIu4btTQ==,type:str]
-    DDNS_URL: ENC[AES256_GCM,data:l3VC5W5fm6XjZHPra4CiD72rslw=,iv:a/D7bGexxzMSc34bRaTajuD9aiE2O7AHU4gUhMrW478=,tag:Tu3RULMq2mXi6pnhjcaRtA==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:3ZNHJgaGc6CHbF1L3nIr06Ap0Q==,iv:+udbS6p65zIx/RljviPkEVnhEqrfcyrk2b2BVmj/lKs=,tag:qN2bTcRKSthD7rlyKkLsdg==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:IA781jMBKa6gCHnbFRxXntt3QLsqmw2w3I5LJ8ADwVl1KNGsKOLCow==,iv:xLJIgiYb0kA7FLChB9KAP/WpkeztyXCMnUEOcPNU42o=,tag:I/2Mp9dWUUt2K4nCeqM8LA==,type:str]
-    ZONE_ID: ENC[AES256_GCM,data:tMKaJxcMBdJfyHv7AjDNko9t8gpYkcwNNxJeY1IZZZM=,iv:qJBwz6xww8vlyNoaL61iMgoCdEOnpLypjp88M51oIio=,tag:Qj+WUj8rxY7IVjpJzhizmA==,type:str]
-    #ENC[AES256_GCM,data:PvLsG/JDQp0=,iv:dIsIrx48pHxmDbXOYnKETtj3Y7j/dfDnJAD/b0ACXMs=,tag:qMTOyN+DcQFMi36ariQJ4Q==,type:comment]
-    GF_ADMIN: ENC[AES256_GCM,data:ztHbL6rib+tJ,iv:4mNFNGnVFZgVbWapEdbuoFBzO+bTtETXhKJRku7hTUQ=,tag:Od5JWCC2VQm8J26q/Yicbw==,type:str]
-    GF_PWD: ENC[AES256_GCM,data:XZAEDaF6tCcAAFW9M2Dj3r2jIJZPupgW,iv:xlfPWnLuDV+Wz5HRCwsvDeqs5csa1NPuOh2IsZJnR/I=,tag:j9BhhZ1+KKnZM7Twx3tKMQ==,type:str]
-    #ENC[AES256_GCM,data:WCsudP1bmhbkrw==,iv:Gs+LfKitfNcNDDBpCYc4bn+9742txIgCQwBEHtNR0q0=,tag:Yz1OuuQVTL7mAjP+tAd0eA==,type:comment]
-    NEXTCLOUD_USER: ENC[AES256_GCM,data:1BoTH+DcoNOk,iv:nEMnQjJzl1JDCw/WMDMoZ6EhGR+I0GHszb48CIx+0tM=,tag:RFSIcw3yN2txpq6iPwKm8A==,type:str]
-    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:E+gfx+L/xxd4rmcz88o2zUcUDW8=,iv:UD8L4D+SdfFSQSXF4+nJkSR4tOEzuV/EtNmW0gXXe6w=,tag:u4wvIDVpCKtdOMAynO8agw==,type:str]
-    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:ozuNtMLeTdEZ8RmeDmEYGW8NASVR+X6x,iv:kyUzOCVwe+V33cIvY8yloilT72yKXaBoSeXBvJQOttg=,tag:vVxyzu2xcLZt1/T4DoUjhQ==,type:str]
-    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:qvfUxZ7qgP4m/tSNDe7OClCItQ==,iv:tH3+Ph8krb77H1yPzzAUs2BgNdeTE71S/aSzHIseQfw=,tag:bWy+6p6tyb5ad0pKgLMzbQ==,type:str]
-    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:DOS5bSKKp8E3qpUABs0HsiMM,iv:f+qrPRZUTqGmUFfYvmkHNXoGDsN7XxXXXeAIc8ynyv0=,tag:os05juxt6j4No660fAjiFg==,type:str]
-    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:vZzDpxBKpRnSc0mU3GNJC48JYVXtbms=,iv:RByMkFHXPx5es+iDi/HhZ4hGiEsmL3QhQdAw28qbUN0=,tag:W47WR2BVAk3KTDHfZ8/3sw==,type:str]
-    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:21/jqeFDkExdvO6KYI16lsW62lJRn77Z,iv:anIMBWxZJMIHJYbQZfB/YkQjqU0w7rjH2VfIMSWVces=,tag:Kil90xyYV+5mhzQm0jbp8Q==,type:str]
-    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:eoTv7Z7WbZ1Eiuvz05bl9yJPzDttXwT5,iv:UGDTqzzttOcibKGHK+S1B9JMgqvLr6djmJ2vjt6eWh8=,tag:8LBnb6Nt+guadPffy9eEIw==,type:str]
-    #ENC[AES256_GCM,data:FBf9d6956p7P7z7B00WQbzE=,iv:W2jJZ3w4NsoGLQ6/IL5/Fm5idTeg4DkY3NFC1u96IjM=,tag:kteB957G4QJIORZoOBRDcA==,type:comment]
-    METUBE_NFS_PATH: ENC[AES256_GCM,data:YYEHB92VyaZHtW4OoVWRUBT5xFsEIxwCcWM=,iv:CpTT/AxkTshp7iGL+SsvE8S6e5FlP7aScmX2qU0nKyI=,tag:BJmtlF2gYE07x6/0Nondsg==,type:str]
-    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:VpFyo9iZffClViLl+nRKp924B7m++8Wh24icyRVqlvhLo17rpQ3O,iv:egq6YRBCCLB0xkUTRd0vi6yXFPn4YWXg/nm2SqYmagU=,tag:WxAo3Mdh1nQJ4SKQGXketA==,type:str]
-    OZRATES_NFS_PATH: ENC[AES256_GCM,data:UYgNmQB0r6J0K7xyMZhCcbr5EmPVA6BK6+fQQkI=,iv:lNpbIkvAvmbqkbF/VB1Gp9JadcjeDuN9ywL8RxEGTM4=,tag:qaE20I9Nb47lIFkcIi54Uw==,type:str]
-    #ENC[AES256_GCM,data:a1/N2U7yMMfV1AdgSU11q1MhkvDvyXaiZSUhU7cjfNYn/w9HNpOklLoMyeJo96Knspjy/IULYdE=,iv:iShdoQPDRYvjOEW5c87tB2gYNkxi32FlvYduaHEIPEU=,tag:6DkLop6ngxkaCUCnWrunsQ==,type:comment]
-    #ENC[AES256_GCM,data:B9/seAzpgEFOyS6NPgNBBC7GZNCq8HLG1w==,iv:kL09iYbEHmLuc9ElDPxnnMISKmBjoX0hYgtX+yhIWOs=,tag:qdkEsWT9GEf6yDcsEbKuZg==,type:comment]
-    #ENC[AES256_GCM,data:Pnwz/6Lm04jxqXoIn6TUaQ3yLVsT+Sz1EDOfJbL0uYj3rUwESqFT7moAd/YJowwEwcGPjsa4GGYDEY6FI4dJk+bU9wlqiDxshDk3U3I=,iv:SpTMzhoNf6QbOTjfx47CUBa5jRJfaZ9d8Wii2ig7SxY=,tag:BHrWixST5Wbh6L3UIadMEw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:j81Gtvcq7osO90YfLZOe6WCiJXsY8GlvdfPN/7m+1k0gsDhZnw33G2ICsg==,iv:bQEA5lPU6I1qvx6hfeh7k+SGKc7t1fb2TyUdG7kiNQU=,tag:6UWPcTZEH9PRGAhU1ucp0w==,type:str]
-    #ENC[AES256_GCM,data:YeR5V/9v1sGycf5jO3/y3/vFlN9v09zWg7ZQwo7TcH7A4oagX4GJlj7OYv82Be5IHAovc+ZfzNYJWYE9IvHEMC7U8xqQAdY=,iv:wp0XfneDX4sZYGaWMBRVS+up08eekMTBBBxi4lA+294=,tag:4fKLmqRg8w/O4wFmwrxGxA==,type:comment]
-    #ENC[AES256_GCM,data:/dkmwxQb+uBA++ykGzuT+WsApZ1lVKo9VC8tWIM+PBqmZO4+7gyZvIscQakDSO+TZ/5UkSSg,iv:Vks1O9/Wkh2+zi4/suxI6pZeGcb1KE5Yk67sgKfXF6Y=,tag:LUJQcWPs2/M3eVwcqSegaw==,type:comment]
-    #ENC[AES256_GCM,data:kjTFh0CAPI4UcuyGpHgbSWKsyFQjbpUfrjsOc+kTJAfIB1U=,iv:AtCkkzSMvrw+fl4QEeN6Xlv2xl73b+I9qjV9YJsZRjg=,tag:UpKDXfT0uso5uu6MXQ3QFQ==,type:comment]
-    #ENC[AES256_GCM,data:HRXThZUzpZIzcLErZZ5bitIC+7feqDaTZM7N6TJvrFsxgawt9QGz,iv:uVPu2fHp5o/+woXwrY96z2ZwCpjShDGJwXVmn24r5eo=,tag:gzb0Wc8clFqmIl2MT5PkGA==,type:comment]
-    #ENC[AES256_GCM,data:ks10ZCcwULDaO4di4FI=,iv:F1Q5eyqq2XqgY90F8ZLMzWbZCb6nwX/b4NjyFr/f714=,tag:7KGPA1HLst6lIqwU8DrfTQ==,type:comment]
-    PODNET: ENC[AES256_GCM,data:Tf+dyMKrj7zgKKxRng==,iv:GzirXijuiGB7IzTka4jazpSW/JOjQSFRAgOsdD5ZeQc=,tag:5IFbLMW/xGSnR+0kn84UWQ==,type:str]
-    SVCNET: ENC[AES256_GCM,data:eYbsOF7cApghL/fN1w==,iv:AIQPuu7djM+/IvzEFhEUN0D5DyrbH0eFwedb0mC4x2k=,tag:xu+9x+m4pFVldPhXL8APyg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:1qCi7A==,iv:gcGSUerpRY1kdUKaNAacy/vZHqgE8b1dzIWXIt/pito=,tag:JR/lwYIvg7kxa4Yz5cImsw==,type:str]
+    #ENC[AES256_GCM,data:ES9Oo++MPpyjJt/G,iv:CN3CDDi6w74C0wGPxGWT6UEjlFNQGTBZY9IFTwhG8gA=,tag:829lUu1bfIny7WTzHWHleg==,type:comment]
+    PROXMOX_IP: ENC[AES256_GCM,data:HGIqI6Pj9B7QFdM=,iv:w4zEQJCrk2txdb7dOgqRQWtHmQYBzGSNlp2MlMvDcVA=,tag:x81ZwjC0XNcD6MmIYbmK5Q==,type:str]
+    VIP: ENC[AES256_GCM,data:MroBFD+2J/M6wzo=,iv:4oftA++BmaLhqric3Bbl4cM4T+2W1JrOke6ILDuqH4A=,tag:fxQkKAtlvbKhX5DDi1jeUQ==,type:str]
+    MASTER1IP: ENC[AES256_GCM,data:zj7gC0WcpQgnZdg=,iv:mjsUcDxAf4mntieNsIKsfeUtp3W93kbxkcLLfxgFTVU=,tag:60V0gqJNfvodjt0juJ0Vfw==,type:str]
+    GATEWAY: ENC[AES256_GCM,data:tFYZpAydYNm9gw==,iv:vY6FeUmgKWyXfUEeSHS4lDXFZYa9Uga8QNgERri19eI=,tag:EXJHuYz4Wr1fcpEi4zMkXA==,type:str]
+    #ENC[AES256_GCM,data:gzmiZANW8GyUZhnnK/N6,iv:ST5oWzeqaO8Q9AsdPWmqJ8RQIbuRGOitmpBRd2R1VyE=,tag:74tSrZTJL0WLAyMQKctcSQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:lM06c/7ZZZVoRukIOYOwa++4PrD8r9NiAg==,iv:3rmKaIwX0qbPI61z8nwJtbjXaMY9ISK1EtSDRBhdKSM=,tag:5IvNWiD6VTzIVP2nfmkMYg==,type:str]
+    #ENC[AES256_GCM,data:N0F1hHuoI20mX2VOotnaMBNIUg/GmVE12A==,iv:KFfK/yEBkTv26JIl6zJc3jTgrkGLuSHIBNYMITmsiW8=,tag:+JpdjbwKFUA53gKwyG61iw==,type:comment]
+    NGINX_INTERNAL_IP: ENC[AES256_GCM,data:XeZCIX1l7Y2J+zgG,iv:G0gEyYz+AEvYpevvxx1WM09rbUoOr5XZfuTMGkGz1AY=,tag:22Rs6EDCmUEbjpQeHU0rMA==,type:str]
+    NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:dBwmdNMzu/D8coqu,iv:y8cSRRp/H+oMFTTi92QwAJbqVUcONgj5ag05WpWxSeQ=,tag:n3SmqtSBCsfalu/Bx27mjw==,type:str]
+    IP_WHITELIST: ENC[AES256_GCM,data:Rf3QpIfgxSKRsXgxV/0Bo1IX4GARi/NRxI4=,iv:7Y2Ftt0K0gc9xmkVKsQT/CDgjgRFKBoqYY2LeRuhslE=,tag:gR1rw+b6H0lJ0VEId5rjzg==,type:str]
+    BLOCKY_IP: ENC[AES256_GCM,data:rF4EcT4nXMz9uZ30,iv:d2rrE4/9k0VImlwd80YTGuctTKkPhVn8ALHgjw9sp/4=,tag:D2pxTzt3UReNKmVaACRcZw==,type:str]
+    DASHBOARD_IP: ENC[AES256_GCM,data:QY60XO4qOYpJcKXp,iv:WbMiXyPJWdXfccQgD3Sc/sKUvy3BnA2ISUNKoJOO01s=,tag:KZhqvjaiPvtJqTziPkQuZQ==,type:str]
+    WG_EASY_IP: ENC[AES256_GCM,data:gnJxWYw2MijrD5si,iv:XhYwlsX2eijA4fcd3jKXtU1KkP1SLmyL0B4+daa8gm4=,tag:734lTyIyBLulDSslbSTxXQ==,type:str]
+    MINECRAFT_IP: ENC[AES256_GCM,data:IM6ZxJcPi/qJj4oK,iv:18OoT7ZQ66zgdRvW6JkRp1SgwcvZfyF12yMoWfDx4hE=,tag:oPAOwX84vMq6Tq3oxOJ+nw==,type:str]
+    #ENC[AES256_GCM,data:7WQarY4Qkq5h1OgdnSn0CsXE,iv:dy1z8teJerkx6jtxsQLGtujm/QB3/St59G0wiHQKqGM=,tag:M/apXePWTufzKdtw9bYngw==,type:comment]
+    BOREALIS_IP: ENC[AES256_GCM,data:OscNpizlsOIdVnM=,iv:Al9otttR632mNHcujTWJUYE4uCkOmKamPHSFA+fmee0=,tag:12sEwZubZ71K1wuF3Zvq+w==,type:str]
+    #ENC[AES256_GCM,data:+SnD+OlMAs9ALMvfpWHpyA==,iv:nhvENrHepwzMQLf4qn7eiUXXlPm6RBLsxVE5PWMuun4=,tag:uar4KdNHRirCMXQyydcuiw==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:UD3AFVnLXaqSX0QVvA==,iv:I0F68lWjrXThUmM+qSz5Vs9jT5f3W5WCR3O9nnsv4xI=,tag:KlCVj03a2sy+cP9Fa+zuWw==,type:str]
+    DDNS_URL: ENC[AES256_GCM,data:C05geSVFsXX6AIaQnXaR6cNsUbY=,iv:Y7iXkA12uHGnUm7SQ30+B15JtYsvoQHJjUT+3z5hmus=,tag:W4ELw5/MxHi4TR/xvqoIwQ==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:98HgkOL3eLkgO1g+2DD+1L63OQ==,iv:nJTB3yJaL9zvaGW1xqWR7BhulPtWfanzIcvrsFU+2CA=,tag:TcMi3/uAaXXl9JeDj24mUg==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:6ngJX0Ye/nHlStgoHE18DTPPdIoOEgxveXzKuAQmyEYQRXJz615srQ==,iv:IblhlCQaOw8G2/fYkNjwm9A61LtoTwzg8mGf4/DVBBw=,tag:mQijiZJ89wI9JhgM68Zmeg==,type:str]
+    ZONE_ID: ENC[AES256_GCM,data:fe2af0Bbkp7Z+/mLMVgOZyN7aA/OMw5gUzPlYsqb2yQ=,iv:ASKfACjBxIbKoHKqRuMDCmJAVLBM3oXm1X5z4/kCM8I=,tag:x9uYQ0JFHl8j2PFjqkUTlg==,type:str]
+    #ENC[AES256_GCM,data:3cLroQP7Vog=,iv:l9PNbJvWDpdZz7SUk1rHgPTUuRdULwlP5mfJa4pG//Y=,tag:i/D1FnBXVNw1CyrLMZdqBQ==,type:comment]
+    GF_ADMIN: ENC[AES256_GCM,data:eU2kBQrjXpHg,iv:2IMep6nrIwE9neKXAPOo5buFq2PxLF72zwT4mqLYCPc=,tag:RGzd/0xCzK243UQYUJb9ZA==,type:str]
+    GF_PWD: ENC[AES256_GCM,data:03gD/ZimxViilWppui1SaCpdL9eUZqst,iv:840e1pGM+1FibvDEzb+b29DnmwnHHeIDbhWYqxb6mtE=,tag:HkzCj9NJBbJBTWTTDI9yGg==,type:str]
+    #ENC[AES256_GCM,data:i4ESX5FRhMKHgg==,iv:7QXr3poqhpR5A01q5ZwFIfIpjd5zZ8hnTPqiFUiEKeA=,tag:Qo4OcuF09X3QrKpas7SZ0w==,type:comment]
+    NEXTCLOUD_USER: ENC[AES256_GCM,data:y7j7jm2GnHn8,iv:gZ5vwvKS7gfUssoSpON4Q8ZkY2uFtS5VT8eYWOtRy40=,tag:6OAtLhUTMW3zcvcYKTZLhg==,type:str]
+    NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:GPwPsPOOSuUM4AHlpRGc6YHpKW8=,iv:Wy7yjiJssK5r1/Ydkfd7qoxToUibS4/Fxovtpa0n6Bk=,tag:eY5rG6w5RArs3b2VHPStag==,type:str]
+    NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:nmiTwpdqdtAbfrGI8v0rwPWk6PnTO62A,iv:Ck3JoGFsooDY884CW7xG6APpnQ81y9TMljLM+VqrKdE=,tag:ckCTcwGQsrye46pzkhDT7w==,type:str]
+    MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:wEWsJuXvToyoJonbjsF8qKeEOw==,iv:W+G2FOcKwnVf281/xHP0xn3E2Mmz9jWKmlLCr5g0yuc=,tag:NKUhSlC1qujBjXcLhzzBsg==,type:str]
+    SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:528bJliAmiRnTxgijNQrFZk8,iv:90EccuHVB0nM6+lvO18Y/P0ICGG6IKBI4xELHnbfsJw=,tag:zT/gZhW+d6HK/wRhMBFRjg==,type:str]
+    SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:BiZEFCTtYfznISBkVG7RnTl2GKN6e48=,iv:iyqSHEeM+E+4mhxW3kg1jL3GWazbbDvZ4vELT+K6xyM=,tag:vQ+xkwYdQVfldKqqgY9qvw==,type:str]
+    HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:5/67fN/q7pigW+4F8tFkfbJQqXHCJzLL,iv:DrkgWnBADYDXKOL7SFJAWcMcELlbW84pDitbNWDkyDA=,tag:8k5ZntxDRp5VsDSaOj/GHA==,type:str]
+    SEARXNG_NFS_PATH: ENC[AES256_GCM,data:xTnTl1aJabCSDjqRd/myei54/z8SecZQ,iv:CcpmDtwO0Jn6OM06XVjhR5ndojLVGc5Qa8Ll3aSHGQg=,tag:IFE/4tHuK6BPal9L+vpsjQ==,type:str]
+    #ENC[AES256_GCM,data:Lir99Dyzo8a/dWwpDFIb21Q=,iv:9MQ4IfA7WzqLY5kp3C2gyGfvPlmU0NYMMokkRdlxkxE=,tag:QPcBGXmceP4Aa61cH2WATA==,type:comment]
+    METUBE_NFS_PATH: ENC[AES256_GCM,data:5mOoFB9wrmnW8gB65e35xCDILlOO+kjlszU=,iv:jLLT/npHPoC0XoRX/b4BX6+YhVgcJGrezCfIvqZmxYQ=,tag:tlpAUAait0tHLr6OUVPfuQ==,type:str]
+    VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:d6FFmtPNcfbXJzM2cVbEn7B9ANdqB+Nd6BKNuAFNtR17C9x484Tw,iv:lnAs/gr9oJ+kC0VFlTHXzgcZ+Lsb31+EK3w/z4/4d3w=,tag:M/W14C3S9RycZkOL3+gr0A==,type:str]
+    OZRATES_NFS_PATH: ENC[AES256_GCM,data:eytNZY3x/H9rGiUy3AybVQqaowfr408P5RIs+F4=,iv:fNDYMAzXxdjg0cWLchVUJJ49BfyKSlVrZwQuxhGRzPc=,tag:/LAXBLtU4Dy4qb2N7P4VBQ==,type:str]
+    #ENC[AES256_GCM,data:lsNMQ/5Itb1uA2eUCLoT68zbYTudTDSmeEdS4ush8xoUqpdBf/Z6TsHlpmy2lr+ZyUwAJYa3Tgs=,iv:0dBDL5fiB0INwH2zYCOuyDNUCPX+tfl5i8gRwEUkFXY=,tag:U6vSRxkj6dr2c7LUGBpELA==,type:comment]
+    #ENC[AES256_GCM,data:NU1vewqDRdnsP4Im2MMu8WI8eQuHw+cFww==,iv:VE/FLJTFnqBsMHOjHNia89xB9zeeCZZy1hT81ZEAtlI=,tag:Q91jjRYgTMUxjZHdbL/B1A==,type:comment]
+    #ENC[AES256_GCM,data:Q++rqQ9YlGeu2f5PwyH9oGWcNUycWBE+cHp2wElooKFaWvhZYUFl6L3B4xxxHJTBMcYBLs7EbWIS+x/VWd82Qkm2ET9IOEOKM5AYINA=,iv:cDF0qi5q8X61ax7Q+G5Fp7gom2dzc450AA+cFfMLX4U=,tag:XiNY4OPWGwzHZeNQ/VYb0g==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:Xqq8rpmZiC7cwRn+yGzQwJ51t9Z58zDQD82pibhE+/G2vo8SDCe2QGNmQA==,iv:dJkpTaN4h4YHswEU5ecbWAWpZrV4LGRUYal42JKpqA4=,tag:vq0IwlLVgSkQ708oZZc7Qw==,type:str]
+    #ENC[AES256_GCM,data:T2Os43en+VEmkrWi4El9peXZnnzpfqUP+ixlHnEddoTNlREAqjQKzya9yv8cZ4vM01uWaPFyryFwO1H1jZvZ1kCmspHf2f4=,iv:23wco9J3BnkNRwqjWBI+mETwBPEBtS7OTOVDnVB4xVE=,tag:O9gHLoK9LA74/6OCbrizTg==,type:comment]
+    #ENC[AES256_GCM,data:W5mGZyIU7LGMdQDbdsPNmPZcRE+yKAGWsYvksADBLVN+AV8+6ktg/7a4W2qOWyZTMVpvN0Ie,iv:mG/RHUhy1BgWXJDKSlzcDVEiNdY5DDkC6cY9/6EvDf0=,tag:bF7dcepETWb+r08v4qgK9g==,type:comment]
+    #ENC[AES256_GCM,data:mUHIQPEu/CrC4tnmH1WVnyctg61oZqoF8IC+LXSH5CMlN5s=,iv:G+zpzqyBz1sDIo2kl5qQCOwm0r4FM/56OjwXUy4UbPw=,tag:+fWZRGSp8ca+vE6w/MjiNg==,type:comment]
+    #ENC[AES256_GCM,data:MdnE92QFYD1XiDhA8vqCy0fPHYBYPaIbr4arnG8ojfrHkUoddnJY,iv:mlf/EnIYQtF05NJ21+PgQhXHlhqOmqYD2LzDn7zlWOM=,tag:9y+6cUco8BuhBjT1+ZLd9g==,type:comment]
+    #ENC[AES256_GCM,data:oDtdgGzOOxNtXy+KDMg=,iv:80t00rPfGtniM3oNmqESCPLH9DMKEoBX/XCANnmr11E=,tag:ZNAxCeJp4z35hP6KvBk4Fg==,type:comment]
+    PODNET: ENC[AES256_GCM,data:KeApjbVABfqerqAOOA==,iv:GBDB2Oh7ILlJ6XjUmQm4jps0/9cOkdHWOMV8mUAtPhM=,tag:l+KlkV3DTLnxqqCgzR8s2w==,type:str]
+    SVCNET: ENC[AES256_GCM,data:+7KRKwOS7yNytoyCJA==,iv:ZkqCP5x0IPtzl+HPp/95E0QqmvlaChSe3DVyaGfU3t8=,tag:u0biHb0JLRq3UHEd3RY3Tw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:E0q9zg==,iv:D7ISIMN3lPamcIB133RPNXc+mZF3Y8WzbqHyPxGsxOs=,tag:YLQ9BQtNvh3dtR61RKIXhg==,type:str]
 sops:
     shamir_threshold: 3
     age:
         - recipient: age1mfegtkhyz3p4um3uy0v66l5fwjpsflnhu85l7atjs6n6sr3nl9asfqx0mg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0Y2gxaURGSy9uWGNDNVFO
-            bU96SEU5TWlLcUR1TmNxMFlIRHFoQ2dmMEg4CmJMeW8xSXRCWVJicnpYRlFSVk10
-            SWxJV1poMDc1VVhkdkthTDlCRms0TkEKLS0tIG0vT1ZhWW9keHl0emJveVk1Sm84
-            M28zUnA1eUIxdEJmTk9zSGhTekFRUkkKVf6dXPFPzfPbH/41xXzz4M7b2ajEeC4A
-            VBAFwr/MfN3bZ+qsVnYtZrPYwqCKi+Ji3DMAN0U/LQMU1DbeWQ2GoQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBYL0NPLzJ6VnZzMVdmTHVw
+            aVZkdHlvUTBTWWxCdml4WjJqeGVCNVlqd3pJCnRvSmRKM0ZJbEhBMmxaTFZ3ZHo3
+            NlA1NzkwdW13Q0xBMEgvdFlLVFQ2MnMKLS0tIFNXanFJd1dWeFIxdktPL0dpK1hF
+            djlGMVB6enMwVmNjbU1PUlNBMlRHVWcKmuATyLGW+0RoeOm392/MbsNAJ+xtGeLz
+            YX6szVzrYNyL9Uc3i8MFwL/SqYcVeH8IGLJPT28t0nITfHqYSiDjaw==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-25T14:44:25Z"
-    mac: ENC[AES256_GCM,data:Noam5scWFYzqxQErKNhNsc2p+eiIBF2+eZAjRoe4N6Qxx6L3+dJifaUAr2pWVi+gkOYSb8Qg7Jhhes9A0JDCagsIZFmC3cmgZKaXXMcMnOfIz/k2VSLwZqekIkFRzexWS9TRKOVfcq8/clnZpX3ljbDDlY5mpwTa+d1DYZ5DOJo=,iv:DjzpkdgGxytHpw8c5un1YYIo7ZwJZ8DEpK9Q2GTlOgA=,tag:QwDyzovThkjTbYR/h5/Eog==,type:str]
+    lastmodified: "2026-01-25T20:54:55Z"
+    mac: ENC[AES256_GCM,data:uMe195ZS+b1DrVgKcFBYIHY16yisPQeuIQ+yyMUbxXdJsoJ3YQE6U/MdMpqalXE1gL+3wgGJxxny1gkig1aGXq4UkJVdRGCKOOSz9svX3WiTDdE+IZjc72WLQPMS7tNHdmVZkSOwNPp19Wsp5ZpkLLTJdYh/ItMXnL2EtxyjVWo=,iv:G3rKWqYMxDffRIujAxu8Lvr+bHEmW7QMIDeLy4mHN9s=,tag:lENnpb5gzVG1DP2UyzcBQg==,type:str]
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.10.2
