--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,65 +1,65 @@
-#ENC[AES256_GCM,data:AeTV9wTicgjdA/Wa,iv:NPpebygVw6aSf9V45En/vzxdjaMJeCpO8tqNinkyrn8=,tag:OxmpLnSZFBvUrkcWVPVsMg==,type:comment]
-PROXMOX_IP: ENC[AES256_GCM,data:42CVe2Rp2ujnVDw=,iv:IkSULTlI41gyGzDqNnt1m9RadQUFk2Ii3Bst2IERzQ8=,tag:y58fnKoDXWGiyHDCPCGEtA==,type:str]
-VIP: ENC[AES256_GCM,data:fXP7IDE5qDrsa+U=,iv:/rfVCDi4j4pZ3Y4dpl0gfM2ESto9eoeu4f1W543TL04=,tag:qx4TAFq0ahnld+vylWWSyQ==,type:str]
-MASTER1IP: ENC[AES256_GCM,data:HNGVQ4yFkJ3MdaI=,iv:sL41YQZjVsAWINC2kbXYkUDWDc2OtTMYe7qYgttWy+Y=,tag:bmjVzfrxW3A2x9155V6OMQ==,type:str]
-GATEWAY: ENC[AES256_GCM,data:ILmijAEajyI5YQ==,iv:VbWugd4+zYIa5LqdaaW6T1/wiJtkUAiM7kFPwDtdOAM=,tag:fuYm71TJeReyQcIntvfkfQ==,type:str]
-#ENC[AES256_GCM,data:SVNOVAV7ZS2hZio4MvC4,iv:qR2EpKq4xD5I1ABfHajmq5+ERP2eIEqyupswoZpjWmU=,tag:S87lC2s9tYGprxP5aa/RSA==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:Quy2O4Bcnm1oHzxvnZ2HDvAur2QgYPibLg==,iv:I7LKK0UYJOqliBg2Q3SMUQWI4qTIPNVOOQHKPnsL9+o=,tag:eeGbdNwA1siI0FPSTMnxdA==,type:str]
-#ENC[AES256_GCM,data:U353O/U715YtvxgdyH+svn9GL65rpDtgtQ==,iv:QH2bdv81Nw+ovWJkd3yd1cp3VxJWijq8JSVY12IBeUs=,tag:7M8e4Ehf5cJ8lS7JRVJPJA==,type:comment]
-NGINX_INTERNAL_IP: ENC[AES256_GCM,data:BQx4KR5PbBOV3yCL,iv:A/VKMk1JqtIfnG0PG68ww0E+59bLeQsRM4PbRhShw9k=,tag:EotNXvhAVYpuXWtE40RXSw==,type:str]
-NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:gyswK4WfF3fVFbDu,iv:WnOEsafojzyKh/3WJ7ecOEmCqPBG2yeT/kU0OeCPyus=,tag:gSOnz2zuz6BKZEoH2XfX1w==,type:str]
-IP_WHITELIST: ENC[AES256_GCM,data:H8j5Og1CRKFxfk5OxQVMRZ1nYuelXszQnbY=,iv:m3uARD/pLHBuyD/FaICWWXr/EGO8l8Ibn65U04hPuCE=,tag:k8DjjVot2rrT1PAjQgDjGw==,type:str]
-BLOCKY_IP: ENC[AES256_GCM,data:v4Lbu8MKjPNT2uXC,iv:QTq6eyvIxJIMP16IF5hK8P1xgKBebJlRDiNS17XPZRw=,tag:Jh4I+SF4lk5O5x7TrI6c+w==,type:str]
-DASHBOARD_IP: ENC[AES256_GCM,data:EieyM9/VdvAW45pY,iv:xKNZoLSDHtFhYvsyszFFs9Xw8ecibcpzws5sOKnC2yA=,tag:KIpfgLLhCzfS4o9LAIe2IQ==,type:str]
-WG_EASY_IP: ENC[AES256_GCM,data:B9iXDDErwo6VvDiJ,iv:ZIaMjFRXpYw1HMO2w9YkHaksV5+/EH+mp61FFgQZzME=,tag:GYZIK7lkSF8ZBt/yMHjIIw==,type:str]
-MINECRAFT_IP: ENC[AES256_GCM,data:clN2enPN2AIErPbz,iv:67Yydyd2gkVB4v4s7GmXQ6JpDUJ+Q07DYUJVjCXrJpw=,tag:mohF/tQSp0RvZdf/ogDqOg==,type:str]
-#ENC[AES256_GCM,data:nir6aNjdPVJCISJ2IkS3XUj6,iv:uJ/wc63DdCYzeAjURIDJ034RNLCfbPJGCAPjJJECPpA=,tag:7JP9c6fL/q3WWS0EJ7/ZCA==,type:comment]
-BOREALIS_IP: ENC[AES256_GCM,data:Zer8eMWlMU0sP6Y=,iv:ueTbUTp5rtg8+SqoQEaK69WRP//6mYY45v4vzlorJ/w=,tag:oEz5PpB78Lq+Lr09WU5Hwg==,type:str]
-#ENC[AES256_GCM,data:mm8EhsN7NY83N/9yRGLbBQ==,iv:/AvPQ5TOsR0djY1CkFTwnx1HmUBf6V3H9TCCVRqgptQ=,tag:wlCctzykVFuUTLek8F1GIw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:04rVptCE4Zo0Qo0zMw==,iv:I28EXx7HZc50OunwQeYXSYQ+oe6lt3uYfp0pN0cBvsA=,tag:u+HDaHznKznbh4Ab+4KNdw==,type:str]
-DDNS_URL: ENC[AES256_GCM,data:kc29FEoNyGS1Cje+O66GzKH/8c0=,iv:JoPp8JRgQW+1pXima4KL12ITSEL+TORF3fUhiO7JLCU=,tag:q/IhCMkZt9TWCMwbj8GnVA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:tJLCLaVGOyNeHPN/vpq81xc4hQ==,iv:C25sqYz82/VMO7T3FXM57wo5kJHVLLu78Va6eTcku6c=,tag:mvswX/UCZkOw0f2XreqHlw==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:o1mE27JfNR8aapz28UHGNyb8Optg5boCgsIH6Mh5Oac7hnUQECyitA==,iv:zDZzkf2zzqdD9o6NMzvOkaKbhq2A0Sfw6pAbrhtD5ko=,tag:An8737AYVSb/lza1e63TIQ==,type:str]
-ZONE_ID: ENC[AES256_GCM,data:1juXsrlbTB6HgKG3Kk1Ln0kPJQLZ9zpY7G50clkYitU=,iv:436c/3fT461IUBnuf3SvWYyS4tGKFU2xODh2MSi3YBI=,tag:tL8e2+jIcw9sQHgMxhKvvw==,type:str]
-#ENC[AES256_GCM,data:EeKvGyth6+Y=,iv:rohc1svxz9dhYQCcRvQ6m13/MPWspyXqwVxMRlU/I60=,tag:xe9/KgxdKF8Y+tsTIreERQ==,type:comment]
-GF_ADMIN: ENC[AES256_GCM,data:rDW1s45mLpkz,iv:LummY9sHvmT4FGbUAxwQz7leCprhPEj4L7SMD8owFxk=,tag:XcBjlwg/wUvq202T7C5D5g==,type:str]
-GF_PWD: ENC[AES256_GCM,data:zWEg4zK1Qd+W4Kf7b5U/Ove5LQqW2o5V,iv:B7p0HtKeMz7pcCzIkjbT6+0tcuY3pIgk+gMgR7nz2uI=,tag:0AH2A693hHUXPeGH0M0dQQ==,type:str]
-#ENC[AES256_GCM,data:/a74kI5Rsh8vHg==,iv:f7dbOjORwYi77iMrz7xyPOz1wHtHqY7A3pnKq6iKDkE=,tag:WrvODWhQP+X/W6w5nqUYxA==,type:comment]
-NEXTCLOUD_USER: ENC[AES256_GCM,data:IZqMLekQHRld,iv:KdW/DMCnGDTjac6hWLKF/emO9TVpYAh8qSiP7ZHPgY4=,tag:+H00mV7pZ7gC3pMniJsEJg==,type:str]
-NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:9jlTiGfRZy2rhubUg1AiB8jFrbU=,iv:RTSMgBbLmCO5epS5urlqNtWDZ9pV0L2zLqxW3Mjd+3k=,tag:5MC+iGRrd0QvcwtpsDzG2w==,type:str]
-NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:rgD8JaNoDHnUh9RnH+ELEzYxcxKIVPqB,iv:gjLGYt2TE2vw9Ghsri79GtA5+HQirvXzR9IhqJR2g4U=,tag:vi4iPStzGnn7CdMDB9l4PA==,type:str]
-MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:iZiZJBdOVwnMaUSH4QT2ffj6yQ==,iv:UG7lsmgqI06DKmLqdqijJWZq74LinMBqcRwsqxQiKIM=,tag:0EC+KhouBl1JvCK0hPNYrg==,type:str]
-SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:ugReczxAZFz6tebXOccgZCFm,iv:5H1QTi6YC50rx0v9m6/KQijlX2CvaWBmleHuPlaQBpE=,tag:++kBkhjxvKBi2YrNNvF4iA==,type:str]
-SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:SXwRPCvIpAQtyOCJ06NvvYzTDhiy6/A=,iv:i8UoRxIoukTJC8ZNXA6QF3eVER4W10HSEnexU9muaQk=,tag:VpmxCijvF4PGkc06FzXU8Q==,type:str]
-HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:YHBKG0pKIoeESWNVRdESW3hWTJPboC8c,iv:7lLB1QKiVmH8LyhV7ohewIFsvan5rbnDC2W7yrstqos=,tag:SZT8l9dPJowffdxd/dZCig==,type:str]
-SEARXNG_NFS_PATH: ENC[AES256_GCM,data:3mwGTb1mPRuTpJhjw89OFESWegcmJ4W+,iv:N+6fL5ihBvd4HrJS47attqOPD/p7EWDgTpd1HHcd+Y8=,tag:QFDBnXU/g7cF+GD6SB8wVA==,type:str]
-#ENC[AES256_GCM,data:Jhwzs6rVtNOZyw6iCCb6Sro=,iv:1Rij49zBSgy3urn9IVFIyw2m1+LvfSF1ByQ9D7BUIhM=,tag:MbquSpMKJCNo07Q406t4sA==,type:comment]
-METUBE_NFS_PATH: ENC[AES256_GCM,data:V2JXg2UV4AdAn99iHw0bI03uh3CFhdvc1hA=,iv:gKrtbhZbxPlwmOE7vjD45VST8ERSMYHtZOlVBV91NHY=,tag:FCimUs0TV5AbibStkr7GDg==,type:str]
-VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:XX5TqAGINcRReR6XfPyXeqJBzFqfLgRIGq3pej7BVFtRAV/Y13hO,iv:PE5b+z7UPEkkvomj3SaFoDJFNxOFDBvamsiRJsitsUs=,tag:cO33mHrouO5Lv0wKjOFNaw==,type:str]
-OZRATES_NFS_PATH: ENC[AES256_GCM,data:/SolkLbgOqOB0HVV3Y1jOvhtdA/RHs4eF+DliNU=,iv:/ApGFUX1uSZnNJTcs5VXYSFM0rRLKwaHmX0iDNzrSCU=,tag:6UcO8GS+c+CsR/538q4oZw==,type:str]
-#ENC[AES256_GCM,data:OzGh8hYzqjWNmdgWIlWQ7Nrd8YWdy0oV1wyhno+OyYK0vnHy0+PWwRFHo14k8fM26jELY10Rabk=,iv:indA0kpFBnkMPCVDoBiDaXN8GQaR/R+YIrOBA8MMy8c=,tag:suh53ij8lNlh95BrSPjUfg==,type:comment]
-#ENC[AES256_GCM,data:jUDprzAwqnaZw7np/jPL7F+4ieE3XRqyeQ==,iv:2uKHrCCNgUZkdlQSXCBrFmvVYklEc/XUKQeehQFAcqg=,tag:EyUiUYWTe6eH1BH+3S7zVA==,type:comment]
-#ENC[AES256_GCM,data:tKvCx85I2qofrrIVDvRjXSRj2YqauPUMMhyBryvcrrTeompJ053zIYXOxkqwodfZeZ611oejPmFtMKlwsr1TR/KNiYAiitLcBXvsm28=,iv:Q9gQNTA1XVyUd/UpbnAnHEN5tlRC23UPMJqg9FAugVM=,tag:IshnMvtlQtBm4E6ye5TcTw==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:23S+mxPPgRf/RoQboZw8MhZMrGbBcfbtPBb48Wlrcx+wYb7NVgQfqgVUrw==,iv:ek5ztZD1XcGG8tICvPTHvjROvocEvV3Kvmp/mTbYhGw=,tag:VS5+/s4j6zaC6KUkeCQvdw==,type:str]
-#ENC[AES256_GCM,data:U2I5LdE5adJ9mOlohzAGufnLT3k9/7pNlVNxSpuauq6jHEnaalizWPSDFIX2cplO+juC0PIchNn/uTha1XYnPanegGj7jVc=,iv:sVab0jFyNGsYMSc92gXJStEODbedlQS11z8W3cSquXU=,tag:3R75kHpdj27U1DgYxZELAw==,type:comment]
-#ENC[AES256_GCM,data:+UT0LeXSIqJsIhAhQk4nvOpLPNoNP8tMRgLuIVoIKiQpjQSGINiNdZiaGhHi7Cwgko2pbZz+,iv:5oLatcukDquk+wx4sT8cKKXkxUkNVKeq/j5K70TfsSg=,tag:4MvFv8iy8q+OKMap7AVGsw==,type:comment]
-#ENC[AES256_GCM,data:ZiEs4hdmXWfBgbLma/KDFKx7PWvtkKVpZ4Vk0FQ32N+e1zE=,iv:gwo9kPJQLMG4DwN7JGsGLJXQFtefdEb/bL988hNtEm4=,tag:xG867+bgYGo9YYGMyf1KgQ==,type:comment]
-#ENC[AES256_GCM,data:iOsJkjj0jeIwcD3n9d2hmD8p8GTW3XOy2ifBQzSHuCHRu9005FXQ,iv:u9zFscW6Ehm1Zvg5IMHcW1ot1HAszq8j/vrjXf8ESpY=,tag:Ch6j1TL1rKGok0+/7RsupA==,type:comment]
-#ENC[AES256_GCM,data:Crp64utf2eReZja6Az0=,iv:OmCRvLEGEN1JRjblh+Kg9eaA4AMVDsKQKseVEi9Yy8Y=,tag:TuemC3MsPYe7KGJdVEVWQw==,type:comment]
-PODNET: ENC[AES256_GCM,data:FfELI21gD1gbq66oKg==,iv:Wzl+lhIceQ0svHYUfy94PKNIc79zfPY4NXMOkK8g24U=,tag:2B2PtGTKPjmLXezwmJD1Hg==,type:str]
-SVCNET: ENC[AES256_GCM,data:a6noIuSyFEGCPXVMRg==,iv:jv6VufMnJxy+FFrsdfWlCF1RPPrxEptCkicuiyHNHM0=,tag:E3nXZ5NG25LKfDraUr76Kw==,type:str]
+#ENC[AES256_GCM,data:DnMNAv8qykDLh001,iv:VjzOpTuynN3qB6Lv4BZdnvjk6pK0lPXIrC0/zh2Zalw=,tag:rGLf8dEPi7MQWyYZWoDboQ==,type:comment]
+PROXMOX_IP: ENC[AES256_GCM,data:Pjno5fsK3Ftes4w=,iv:OirzuC2oD2lWqf4oHMalZPnx/dJEVxlesW8DPKnoaWc=,tag:sDawWZ9BlPTwQ3a065N69A==,type:str]
+VIP: ENC[AES256_GCM,data:G7MtTECy24eN654=,iv:P7JMOo7y6RfGj0Qhcaz00rcn80fyamKZpsp1kVwQaVI=,tag:GkCYsbp1URdu91dl4z7knQ==,type:str]
+MASTER1IP: ENC[AES256_GCM,data:OZN7v42MuS+PnhU=,iv:NmfGjIkDU9GeIp5c/aKP4jW9UntbjaAB7mq9rcH+oY8=,tag:gq2lnY5yAjYlPVmDZ8Mh8g==,type:str]
+GATEWAY: ENC[AES256_GCM,data:99dYqbp3W6P1Kw==,iv:RB2awGOawNLXbSAoKDAbgmO86532Fcqvf1j1Do0CeyY=,tag:lmTO41HsauPdSj4k+yey8Q==,type:str]
+#ENC[AES256_GCM,data:mLYTL2JNtl3KrkMFH07y,iv:IoKwBfXo3bjYDX410V3BFQgom84bW2jva02Iu/7qqP0=,tag:sHJMbucXtRjmO5PoLEoCPg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:n1M9SnisgfoJA0/VPUke2rGldRTCT0SQ6w==,iv:PxtZlNlkHXsKIHQ7NNc1POa7D099n+iy04S8VC3yDY4=,tag:PxgJth7KmxyAe9tSWr0O/g==,type:str]
+#ENC[AES256_GCM,data:DDg9f9sfoM5Ry97RU5FD05XJ/tqG0/Sb+w==,iv:JIlN9oH1GdOC9a1+uepE0kKSrbQDnUDHzZxFeIUJfMc=,tag:gCpck6PKBMa59kiHuvHP5w==,type:comment]
+NGINX_INTERNAL_IP: ENC[AES256_GCM,data:ytzECKsQeD91itas,iv:I/9ff8czAXmqKa12WMIH8lzGWX8VrzDE2Ju3HbKbSOA=,tag:sz6tE9VCX+O7w9F7lr4Pyw==,type:str]
+NGINX_EXTERNAL_IP: ENC[AES256_GCM,data:DvB8tRQTDkypslc7,iv:g10itdJUkEPS5ETJ98coVv0y2GdziFbq72nCrnj7hDg=,tag:WCvusp7sq5GwxX30aAbqug==,type:str]
+IP_WHITELIST: ENC[AES256_GCM,data:J2TB75BghPDCR16YRbfAIkCAi2vyJuGF5Js=,iv:vXH59HkFrsT9TF5a4a1hpubrkQ6zmz91BIYXFTG803I=,tag:/fAWmmOlKB0C33BqK8C3hg==,type:str]
+BLOCKY_IP: ENC[AES256_GCM,data:pZ3NJTSG41lx8mXA,iv:PVZT9rvGG+xW/PAWwJSfD2YVpXY5bybAFnE5JSH9zBU=,tag:mKSOMrB4QXQe06pix3LP7Q==,type:str]
+DASHBOARD_IP: ENC[AES256_GCM,data:0g0y3a1tKoAhiU96,iv:kubYI8iDdQQXVT/hC8y1JbrfQxGw6iyJX77ojDeIFjw=,tag:EZKIswDRSBN3u5b67DYFVQ==,type:str]
+WG_EASY_IP: ENC[AES256_GCM,data:IahkZvqKBJux9IKi,iv:530dBpRAvP5978LLQC+vgaALukKFMaT3bRDMs0iU/JY=,tag:iLGN1q1U8Q8zWoCJiCpCZQ==,type:str]
+MINECRAFT_IP: ENC[AES256_GCM,data:401AxuPqAAuYXmm8,iv:m41X5N/PcKbJPnIfJ09iinog7EdaJ7xd5VzIaSitQHY=,tag:AjWJWMxHNqwDxEMkyNOS7g==,type:str]
+#ENC[AES256_GCM,data:xrPW3g+haoAB2TCpYUpINI1t,iv:S3CWM4pBQGYmaF2Nya7xx9xzwWlHoa4dV9YXWbpKmyM=,tag:dY+U5JuMZYMJFrwWvLU6Bw==,type:comment]
+BOREALIS_IP: ENC[AES256_GCM,data:bKi6dyyNVR/iyXk=,iv:KSqBKUoLy0+EiTnq/0hrx+66NZOF7XcAG3h5QaRihWQ=,tag:uWl6f/7wYcinlVuHPM/Abg==,type:str]
+#ENC[AES256_GCM,data:pxvuKPTBgEg+LOBzsK1WJg==,iv:P7X4u4VPzxSQ78QBUXV2YGbVVef+4sz8mximcmSRBiA=,tag:Rd4E2GiMM4pRi4DN762r5w==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:enGr+QaEb2gQ4+uDTg==,iv:WU4sGKdILq6zjZBP+7StY2T490NLRES+fLCj578X2gI=,tag:utRaar0XNKvopB/4VUj+ZA==,type:str]
+DDNS_URL: ENC[AES256_GCM,data:GQkGDx/bYUseorrf2fLOmhHu7VQ=,iv:QZn6IJzV59AYs4cj22N49qU6QzDQtjHBFoSJumaEhcE=,tag:SUG4yOI4zhnQXNjKs4wbMg==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:yEEyleoWYeatTwMyq8pvhIzNSg==,iv:gkZesZ7VFONvlvHHqZSzM220asz/yAa2EwNej3YShb8=,tag:N1y7Q+Z2tojHKvSfMy6kvQ==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:yCKO9nUK+eWbKbS2wWqRp8XaCBtnBaJ2dhGaatMN5uhKMG6ZzYxryA==,iv:qMBZeu9S9Cd4krAJ+Ykor5OWKp3ZhxxBGeaN7AL0jkM=,tag:C53QBZMR0CG+BOTxJrz0xA==,type:str]
+ZONE_ID: ENC[AES256_GCM,data:n2ZUel2hsAphIdib7R0NS+Vxdn3a48jgi8jAGfdK8D0=,iv:KvM1LakVOH1746Qs1E2YL6YPlQPs0ywfkGs1nz+bUdI=,tag:0x4Oneq/We67krkQoZm17Q==,type:str]
+#ENC[AES256_GCM,data:GOhd6r/kPf0=,iv:ql7kV67l66NJlwN5OVKSm3McIVbAw1PzhtIS6FOIEkw=,tag:57kfry7/1x2ryQF0MsXhXw==,type:comment]
+GF_ADMIN: ENC[AES256_GCM,data:vXko+U5GDesT,iv:SWt6efCf353d4ifYSIyd7SAvtA0wW90MjCsA34DaYBM=,tag:w2axe6d8cKozIE3Yu6qZxQ==,type:str]
+GF_PWD: ENC[AES256_GCM,data:XKkRGPddf4Q27QwJUeZEOM8RFt5RVlVn,iv:2Kvb06U7Nab7Yf7Y89nCzq3U7r4JVOimE57BCjsBfSQ=,tag:2oKlVcF1zFJP4qmqGsr2MA==,type:str]
+#ENC[AES256_GCM,data:wLdH+woHO6QQqA==,iv:zQFG34ZQUC7g6BwUVxFonUX1Wf/7zQKeSu7Rlreqy64=,tag:o/zrjpL5jaHT1AofpjG4+A==,type:comment]
+NEXTCLOUD_USER: ENC[AES256_GCM,data:+srS77Fn7ot4,iv:f625v0xJTs7UXaqKFM7QIJlD9QIVWAlBLnZCqGyb7Go=,tag:1pj9mBK/lJqTSTtD8yeIwQ==,type:str]
+NEXTCLOUD_PASSWORD: ENC[AES256_GCM,data:GhPiARr31BtWnXrLGA7p/OtLuCg=,iv:1RYCJ7T3FdWQUTeaqMcNETLNhyHyLtBFc/hup/lUnjE=,tag:YEDz3Co/nM/QcSNQjgQA/Q==,type:str]
+NEXTCLOUD_NFS_PATH: ENC[AES256_GCM,data:jqFIWs3Tct5B7BrvBsZW2rvG8p9HO6EB,iv:gQIZx55dYu8msiT7HhT386k69jTe7Z4rSYmL3xVHg4Y=,tag:7TlOj4d3wKu8vZpqv21VMQ==,type:str]
+MINECRAFT_NFS_PATH: ENC[AES256_GCM,data:QWakSrUhR/vsTYMY5mdzEd7u+g==,iv:GZGiMIn69E1XULMCjCL9zRwyZIO/xwSi4Aa9GPGDt/w=,tag:es801vY0G0BimpZPJXo2BA==,type:str]
+SPOOLMAN_DATA_PATH: ENC[AES256_GCM,data:4Qg76P7zb5mCz9T7JpCEQ4Vs,iv:LqpUQY9ZZOrWGtgEdIffvvDf4wI2nA1qRPHK9K1hXUQ=,tag:J5gcK6S8Nz1VNO0T/zxbEg==,type:str]
+SPOOLMAN_LOGS_PATH: ENC[AES256_GCM,data:/iTlUJFO+ur2oFqdR/sB7rMrMXs6Epk=,iv:IzCAMbJMyjYEQ9GReKD1feG6/9PRPl5BONN+erhye28=,tag:6I7Tz7/gAQWlGDGsmbVE2A==,type:str]
+HOMEASSISTANT_NFS_PATH: ENC[AES256_GCM,data:NB9a/sM1Mvbpmaf40SChgZhOwAFhvDyB,iv:HBLvKf/tJUeFQgw3qZSOoRSY/NtByN8wF9juE4s9rJI=,tag:tApVmGtZ8/ZyTYxh9NgEtw==,type:str]
+SEARXNG_NFS_PATH: ENC[AES256_GCM,data:rz757tObd6OL19bDjs8dkQ69Q/mcMHNC,iv:sYL/vnRuZEEvKgzbfio6cHgsLBg8VV93C/54CGz89DA=,tag:3BcO1FPGW/CFjEkhClbkcg==,type:str]
+#ENC[AES256_GCM,data:3um/g6Rv0po9pSGNUdeXo6E=,iv:gJC7i1NImJkY1tHB7d6OzEOOH/3z8rO4S6MugqCOvZ8=,tag:b1KHL87mMizWr7aydnGCYQ==,type:comment]
+METUBE_NFS_PATH: ENC[AES256_GCM,data:N/zU/7PgJL9B2G30dL6TUIeOduZKoG2bzpM=,iv:8fvc7u9QqxpO5VqhrjtG9IX8yXj71N7k8NAtWRBwtvE=,tag:QRSDrrB1z55PnGgWs2pxXA==,type:str]
+VIMINARIACOM_NFS_PATH: ENC[AES256_GCM,data:SVMQezWin97KhfItHsj6nIzPMGGQMbeIQLQvwLUhTbiGbYYvVSVr,iv:EKCuo5fpDewmqgN5bEDOgCTSZOdkoBlOHTkT9RYPxwo=,tag:QeKRP8uShaGLVhZuTb/n4g==,type:str]
+OZRATES_NFS_PATH: ENC[AES256_GCM,data:sUwq5JM/ZVtTi3jV1pj/e5odq5wLQKPJbl8WQnY=,iv:eE99MR0do28WAihFiV6KCBx3yF88B5XSzacZ4OtBjTw=,tag:BH8mdnrl5X0f1HFBRyKNXw==,type:str]
+#ENC[AES256_GCM,data:94Xt38CU096FYFr8+Iv6h777NBJLWD3MKs3nAIPrY3AR2a4f6bFUhlpZ6LOOUdtU0zIcdgvQ2/0=,iv:CvpRgLuTeqj6nq2RmqKKwZPFSibvvgvvoJK84pBiGKQ=,tag:WFfsOKOWWFKableiVRxTMg==,type:comment]
+#ENC[AES256_GCM,data:Y3iBvi9BeCIPw2GIs4D9rvMG5YYT+zYb5g==,iv:XnxTRYrhn1MsQ5aqcex+y496G9fEdVrBZSvQETgX78c=,tag:ch/i1+EYcrUNn5Pv0AfS9w==,type:comment]
+#ENC[AES256_GCM,data:QLaZHQFKhHPIetNcFUpYwN0v9jStDCb2qg41Wj5UNHNjnGzTyeSBXZrS4lDz/ZjwhycjzivaOyOcUfPe0NnNfjERJ0dYeR3d8k9qeb0=,iv:HUzzB7tgyN27q3IkjEzdT/snljemUNVV04IelYbUgJ0=,tag:EXW+P3Kw28yuKWCRSYQELQ==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:It0ItmjVtDCojHkqwKao3a00YS5/PdkR/xI6ITVFr1mDUOsdwtGHVdt6/g==,iv:JFni4h/SJbQsMBLzBdZ9Ca5cb2JDfjdwCbkMwVNKIW4=,tag:H9ftDjIFt5CRLk7diW1YjQ==,type:str]
+#ENC[AES256_GCM,data:IGltaTWwp3BvpZDoRnPZYtFZ0s9v0D7+8YlTUApypjY4AITxqiwr4MGF4tNWErBtuugRem1OnLbX8wvhScv3ZG375ldzZ2c=,iv:jJgixeF34bQ/vO7qVP0Sl5HhChVDXCBL3n/yGvjrB+U=,tag:BhCIZDNqzEMOPStEVcH+pg==,type:comment]
+#ENC[AES256_GCM,data:LrL0FD/5GU+rpcQqnjm9d7PBKx4aBoBxFyBWRdFXrczpqWK8ykkgtrN+/baZtxKeamVVwa5L,iv:N53vu80b/xEk9cIiwC3NSH8V5KqPazSSGyTqFVkyzYM=,tag:2OXIZB1ykR1hffB3J+a57A==,type:comment]
+#ENC[AES256_GCM,data:17qvlQLe2MFmzbxwzZ1J21LqxIU/jc3QO6YdxcTc602C94E=,iv:si427nr20XNzKEHQ+XzTQyWCFJv/peq1fatB8uh2Uwo=,tag:ePgsteIPKBQafVcbW4sy3A==,type:comment]
+#ENC[AES256_GCM,data:GC4DLl9CfACVe/4WOiYUSGTTQvolxWY/m9VwETcahk0RitMXQ0iL,iv:qfT9inIoBFxSunpIwqeto8HEd6MvO4PTZd3b85/k0Qc=,tag:EaobhdY7x3SBIE/OSkFBfw==,type:comment]
+#ENC[AES256_GCM,data:slyDUf5cARPR9wJkbhw=,iv:PwFdqR6dCk7Po/liJJIQQkknUlqhqMD2dfq58qmAQbo=,tag:OQHlSoHidU0TqDsSyFXgQg==,type:comment]
+PODNET: ENC[AES256_GCM,data:C7tNIBRa25eP/HMpTQ==,iv:YdDaOwDo7bdYh3YpM5590x2xkHcpP7GTgCUbLgmtgrA=,tag:kAqB43ybPBrqIJwDEIlyig==,type:str]
+SVCNET: ENC[AES256_GCM,data:PRMYo/o2bWY9qfCyVA==,iv:v8g2dlRTth7njnQ3Il0ZBLj9RhF2sL4Aa5KWlfyZqg0=,tag:454rpBLoVd+P+7Tvy9MOlA==,type:str]
 sops:
     shamir_threshold: 3
     age:
         - recipient: age1mfegtkhyz3p4um3uy0v66l5fwjpsflnhu85l7atjs6n6sr3nl9asfqx0mg
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNaXVacC9QT1MxWG1tT1l6
-            UVpWcERDSHpXS21hK1NGMFFrdDF2aVZRa0hjCkdRZVY5MXBCQm9FdHVIUjRaaHNW
-            T3pPSFJYNW4zbDdwQkg0VjVSMzVnRHcKLS0tIDNRQzNIamxhUTFPSW1IM1NSVGpo
-            UHFSSUMvY2dVV1JxMnRKQURRRXJFM2sKikH6iA2Ms/Cpma9StFIvQZeZAxEkFzxj
-            8qOT9MPowZSOLUt7oJx+LR1/AtgejoOcPweHGtwn+iL/XcFS0/TPuA==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBtQjNHc1VPU1dOeGErWkZj
+            TkV5czFhdlQ2M2trb0dJa203aldkYlNLWmtvCmxyTENtK29nS2FNZmRXUEtRK0M5
+            dlpwUThDaXJGd2lBSmRkS0UwZTA3bFkKLS0tIEZSRUhqOGpsY2w4bnhkOU9ncEZE
+            QjZVUWVaMURHd1BsZU9rTm5McXlWTEUKsU4eHw5QXokH3evW0MnM6yOLD3rWAx05
+            8UF1Vq+t+WEvQ23rma2nbVZ1NzoySj8xlPI9u7gHHHsFfb8C7dkhkQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2026-01-25T14:44:25Z"
-    mac: ENC[AES256_GCM,data:RizmMSahx5nKhhYSZhfAe7gqpO4LKuxguYvlUx7oipz401/Hn9TQJVZUYsuu+48bzqAuDsGAL9rqKAQli49tvTXkOZ2dP9UqdtTJZHxMd5Zh5mQGHmPmge/FRc+YMYa/VVATwm9UfDaVhkuspor/+0zVeesWdGRwdBEL9z29d30=,iv:kXZB7D/+Z4GZK7r6e8ZEGvOx/C0hQChWM+Jm7f/rtXo=,tag:eriypntac8IFbOjP5vnPCQ==,type:str]
+    lastmodified: "2026-01-25T20:54:55Z"
+    mac: ENC[AES256_GCM,data:KdZRYgPClK9l+jNRfYhKpVYV4PxSaCMQXLOXLL2o+K5sPADM/l4/BM56bFCI6u8CZl+YSzTtwaGdOtsfKzh6bDUCdtmeiwhgQEIVrSSAJSUmbY4mGk8Foji7HdEzFFWwhfdx5SENT/yQlu6FKn+TTc/ALixqzqVfw1nb6y/AM8E=,iv:wt/XuVkSZ7uppRVqxjugFHmwsVpI9iiN3pYzN3NkC4w=,tag:j1JQASTp+80gYajD026lvA==,type:str]
     version: 3.10.2
